# aiopurpleair

./: .editorconfig  .env.test.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  AGENTS.md  CODESTYLE.md  HISTORY.md  LICENSE  NOTICE  README.md  WORKFLOW.md  aiopurpleair.code-workspace  codecov.yml  cspell.json  pyproject.toml  version.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build-release-task.yml  get-version-task.yml  publish-release.yml  test-pull-request.yml  validate-task.yml
docs/: purpleair-openapi.yaml
repo-config/: README.md  configure.sh  environment-pypi.json  ruleset-develop.json  ruleset-main.json  settings.json
scripts/: generate_openapi.py
src/aiopurpleair/: __init__.py  _version.py  api.py  const.py  errors.py
src/aiopurpleair/endpoints/: __init__.py  groups.py  keys.py  organizations.py  sensors.py
src/aiopurpleair/helpers/: __init__.py  model.py
src/aiopurpleair/helpers/validator/: __init__.py  sensors.py
src/aiopurpleair/models/: __init__.py  groups.py  keys.py  organizations.py  sensors.py
src/aiopurpleair/util/: __init__.py  dt.py  geo.py
tests/: common.py  conftest.py  test_api.py  test_live_api.py
tests/endpoints/: __init__.py  test_groups.py  test_organizations.py  test_sensors.py
tests/fixtures/: create_group_response.json  create_member_response.json  error_invalid_api_key_response.json  error_missing_api_key_response.json  error_not_found_response.json  error_unknown_response.json  get_group_response.json  get_groups_response.json  get_keys_response.json  get_member_response.json  get_members_response.json  get_organization_response.json  get_sensor_history_response.csv  get_sensor_history_response.json  get_sensor_response.json  get_sensors_response.json
tests/helpers/: test_validator.py
tests/models/: __init__.py  conftest.py  test_groups.py  test_keys.py  test_sensors.py  test_snapshots.py
tests/models/__snapshots__/: test_snapshots.ambr
tests/util/: __init__.py  test_dt.py  test_geo.py
